[gd_scene load_steps=8 format=3 uid="uid://deu18varaeof5"]

[ext_resource type="Script" uid="uid://cb4yavtsh85ov" path="res://terrain_tiles/vertex_test.gd" id="1_71yvx"]
[ext_resource type="PackedScene" uid="uid://dqopkd5nk055r" path="res://terrain_tiles/blank_tile.tscn" id="2_crtqb"]

[sub_resource type="SphereMesh" id="SphereMesh_71yvx"]
radius = 0.1
height = 0.2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_71yvx"]
albedo_color = Color(1, 0.282353, 0.380392, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_crtqb"]
albedo_color = Color(1, 0.282353, 0.380392, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_sks18"]
albedo_color = Color(1, 0.282353, 0.380392, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_homf3"]
transparency = 1
albedo_color = Color(0.0823529, 0.611765, 0.968627, 0.631373)

[node name="VertexTest" type="Node3D"]
script = ExtResource("1_71yvx")
vertex_string = "[(10.22577, -3.767215, 10.30736), (8.816778, 0.0, 12.13525), (6.642941, -3.767215, 12.91044)]"

[node name="vertex1" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.2258, -3.76722, 10.3074)
mesh = SubResource("SphereMesh_71yvx")
surface_material_override/0 = SubResource("StandardMaterial3D_71yvx")

[node name="vertex2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.81678, 0, 12.1353)
mesh = SubResource("SphereMesh_71yvx")
surface_material_override/0 = SubResource("StandardMaterial3D_crtqb")

[node name="vertex3" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.64294, -3.76722, 12.9104)
mesh = SubResource("SphereMesh_71yvx")
surface_material_override/0 = SubResource("StandardMaterial3D_sks18")

[node name="Origin" type="Node3D" parent="."]
transform = Transform3D(-0.809017, 0.579238, 0.0998708, 0, -0.16991, 0.985459, 0.587785, 0.797254, 0.13746, 0, 0, 0)

[node name="Tile" type="Node3D" parent="Origin"]
transform = Transform3D(1.27433, -0.000307439, 2.21431, -1.14209e-07, 2.55481, 0.000354782, -2.21431, -0.000177062, 1.27433, 0, 14.7812, 2.38419e-07)

[node name="Blank_Tile" parent="Origin/Tile" instance=ExtResource("2_crtqb")]

[node name="vertex1" type="MeshInstance3D" parent="Origin/Tile"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)
mesh = SubResource("SphereMesh_71yvx")
surface_material_override/0 = SubResource("StandardMaterial3D_homf3")

[node name="vertex2" type="MeshInstance3D" parent="Origin/Tile"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.866, 0, 0.5)
mesh = SubResource("SphereMesh_71yvx")
surface_material_override/0 = SubResource("StandardMaterial3D_homf3")

[node name="vertex3" type="MeshInstance3D" parent="Origin/Tile"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.866, 0, 0.5)
mesh = SubResource("SphereMesh_71yvx")
surface_material_override/0 = SubResource("StandardMaterial3D_homf3")
